[gd_scene load_steps=2 format=3 uid="uid://brwk3ae5bwevg"]

[ext_resource type="Script" path="res://src/ui/inventory_screen.gd" id="1_i77qu"]

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i77qu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Inventory"
horizontal_alignment = 1

[node name="Tree" type="Tree" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 432)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
columns = 3
hide_root = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BackButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Back"

[node name="ExtraActions" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ExtraActions"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer/ExtraActions/HBoxContainer"]
layout_mode = 2
text = "Use"

[node name="Button2" type="Button" parent="VBoxContainer/ExtraActions/HBoxContainer"]
layout_mode = 2
text = "Drop"

[node name="EmptyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -13.0
offset_right = 84.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Inventory is empty!"

[connection signal="button_clicked" from="VBoxContainer/Tree" to="." method="_on_tree_button_clicked"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
